messaging finished start main site config

--- a/web/css/admins/admin.css
+++ b/web/css/admins/admin.css
@@ -1,46 +1,11 @@
-/*.main-header {*/
-    /*background-color: #13161c !important;*/
-/*}*/
-/*.sidebar {*/
-    /*background-color: #13161c !important;*/
-/*}*/
-/*.logo {*/
-    /*background-color: #13161c !important;*/
-/*}*/
-/*.main-sidebar {*/
-    /*background-color: #13161c !important;*/
-/*}*/
-/*.main-header .navbar {*/
-    /*background-color: #13161c !important;*/
-/*}*/
-
-/*.sidebar-menu>li.active>a {*/
-    /*background: transparent !important;*/
-    /*border-right: 5px solid #df8645 !important;*/
-    /*font-size: 15px !important;*/
-    /*border-left-color:#13161c !important;*/
-/*}*/
-
-/*.sidebar-menu>li:hover>a {*/
-    /*border-left-color:#13161c !important;*/
-    /*border-right: 5px solid #df8645 !important;*/
-/*}*/
-/*.logo {*/
-    /*width: auto !important;*/
-/*}*/
-
-/*.searchgroup{*/
-    /*display: table !important;*/
-    /*border-collapse: separate !important;*/
-    /*border-bottom: 1px solid #535252 !important;*/
-/*}*/
-/*.searchinput {*/
-    /*background-color: #13161c !important;*/
-    /*color: #a9a9a9 !important;*/
-    /*border: none !important;*/
-/*}*/
-
-/*body {*/
-
-    /*color: #333 !important;*/
-/*}*/
+.login-page {
+    background-color: #eee;
+}
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+#login-btn {
+    width: 100%;
+}
