--- a/web/css/clients/main.css
+++ b/web/css/clients/main.css
@@ -907,7 +907,7 @@ border-radius:2px;
 -moz-border-radius:2px;
 -webkit-box-shadow:none;
 box-shadow:none;
-padding:19px 14px;
+/*padding:19px 14px;*/
 font-size:16px
 }
 
